# rug

./: README.md
ae/: out.txt  (+1 more)
ae/rug/llm_rug_final_cov/regex-syntax/: Cargo.toml  cov.json  cov_map.json  fuzz_cov.profdata  regex-syntax.json  regex-syntax.out.txt  regex-syntax_fuzz_trans.json
ae/rug/llm_rug_final_cov/regex-syntax/src/: error.rs  lib.rs  parser.rs  unicode.rs  utf8.rs
ae/rulf/clap/: Cargo.toml  clap.gpt.json  clap.json  clap.out.txt  clap_base_res.json  clap_fuzz_trans.json
ae/rulf/clap/src/: errors.rs  fmt.rs  lib.rs  macros.rs  osstringext.rs  strext.rs  suggestions.rs  usage_parser.rs
ae/rulf/clap/src/app/: help.rs  meta.rs  mod.rs  parser.rs  settings.rs  usage.rs  validator.rs
ae/rulf/clap/src/args/: any_arg.rs  arg.rs  arg_matcher.rs  arg_matches.rs  group.rs  matched_arg.rs  settings.rs  subcommand.rs
ae/rulf/clap/src/completions/: elvish.rs  fish.rs  mod.rs  powershell.rs  shell.rs  zsh.rs
ae/rulf/flate2-rs/: Cargo.toml  flate2.gpt.json  flate2.json  flate2.out.txt  flate2_base_res.json  flate2_fuzz_trans.json  systest.json  systest.out.txt
ae/rulf/flate2-rs/miniz-sys/: Cargo.toml
ae/rulf/flate2-rs/src/: bufreader.rs  crc.rs  lib.rs  mem.rs  zio.rs
ae/rulf/flate2-rs/src/deflate/: bufread.rs  read.rs  write.rs
ae/rulf/flate2-rs/src/ffi/: rust.rs
ae/rulf/flate2-rs/src/gz/: bufread.rs  mod.rs  read.rs  write.rs
ae/rulf/flate2-rs/src/zlib/: bufread.rs  read.rs  write.rs
ae/rulf/flate2-rs/systest/: Cargo.toml
ae/rulf/proc-macro2/: Cargo.toml  proc-macro2.gpt.json  proc-macro2.json  proc-macro2.out.txt  proc-macro2_base_res.json  proc-macro2_fuzz_trans.json
ae/rulf/proc-macro2/src/: detection.rs  fallback.rs  lib.rs  parse.rs  wrapper.rs
ae/rulf/regex/: Cargo.toml  regex-syntax.gpt.json  regex-syntax.json  regex-syntax.out.txt  regex-syntax_base_res.json  regex.gpt.json  regex.json  regex.out.txt  regex_base_res.json  regex_fuzz_trans.json  rure.gpt.json  rure.json  rure.out.txt  rure_base_res.json
ae/rulf/regex-syntax/: Cargo.toml  regex-syntax.gpt.json  regex-syntax.json  regex-syntax.out.txt  regex-syntax_base_res.json  regex-syntax_fuzz_trans.json
ae/rulf/regex-syntax/src/: error.rs  lib.rs  parser.rs  unicode.rs  utf8.rs
ae/rulf/regex-syntax/src/ast/: mod.rs  parse.rs  print.rs  visitor.rs
ae/rulf/regex-syntax/src/hir/: interval.rs  mod.rs  print.rs  translate.rs  visitor.rs
ae/rulf/regex/regex-capi/: Cargo.toml
ae/rulf/regex/regex-capi/src/: error.rs  macros.rs  rure.rs
ae/rulf/regex/regex-syntax/: Cargo.toml
ae/rulf/regex/regex-syntax/src/: error.rs  lib.rs  parser.rs  unicode.rs  utf8.rs
ae/rulf/regex/src/: backtrack.rs  cache.rs  compile.rs  dfa.rs  exec.rs  expand.rs  find_byte.rs  input.rs  lib.rs  pikevm.rs  prog.rs  re_builder.rs  re_bytes.rs  re_set.rs  re_trait.rs  re_unicode.rs  sparse.rs  utf8.rs
ae/rulf/regex/src/literal/: imp.rs
ae/rulf/rust-url/data-url/: Cargo.toml
ae/rulf/rust-url/data-url/src/: forgiving_base64.rs  lib.rs  mime.rs
ae/rulf/rust-url/url/: Cargo.toml
ae/rulf/rust-url/url/src/: host.rs  lib.rs  origin.rs  parser.rs  path_segments.rs  quirks.rs
ae/rulf/semver/: Cargo.toml  semver.gpt.json  semver.json  semver.out.txt  semver_base_res.json  semver_fuzz_trans.json  t.txt
ae/rulf/semver-parser/: Cargo.toml  semver-parser.gpt.json  semver-parser.json  semver-parser.out.txt  semver-parser_base_res.json  semver-parser_fuzz_trans.json
ae/rulf/semver-parser/src/: generated.rs  lexer.rs  parser.rs  range.rs  range_set.rs  version.rs
ae/rulf/semver/src/: lib.rs  version.rs  version_req.rs
ae/rulf/serde-json/: Cargo.toml  serde_json.gpt.json  serde_json.json  serde_json.out.txt  serde_json_base_res.json  serde_json_fuzz_trans.json
ae/rulf/serde-json/src/: de.rs  error.rs  iter.rs  lib.rs  map.rs  number.rs  read.rs  ser.rs
ae/rulf/serde-json/src/value/: de.rs  from.rs  index.rs  mod.rs  partial_eq.rs  ser.rs
ae/rulf/time/: Cargo.toml  time-macros.json  time.gpt.json  time.json  time.out.txt  time_base_res.json  time_fuzz_trans.json
ae/rulf/time/src/: date.rs  duration.rs  error.rs  ext.rs  instant.rs  internals.rs  lib.rs  offset_date_time.rs  primitive_date_time.rs  sign.rs  time_mod.rs  utc_offset.rs  util.rs  weekday.rs
ae/rulf/time/src/format/: date.rs  deferred_format.rs  format.rs  mod.rs  offset.rs  parse.rs  parse_items.rs  time.rs
ae/rulf/time/time-macros/: Cargo.toml
ae/rulf/time/time-macros-impl/: Cargo.toml
ae/rulf/xi-editor/core-lib/: Cargo.toml
ae/rulf/xi-editor/core-lib/src/: annotations.rs  backspace.rs  config.rs  edit_ops.rs  edit_types.rs  editor.rs  file.rs  find.rs  index_set.rs  layers.rs  line_cache_shadow.rs  line_offset.rs  linewrap.rs  movement.rs  recorder.rs  rpc.rs  selection.rs  styles.rs  syntax.rs  tabs.rs  view.rs  watcher.rs  whitespace.rs  width_cache.rs  word_boundaries.rs
ae/rulf/xi-editor/rope/: Cargo.toml
ae/syrust/syrust_fuzz/bitvec1/: Cargo.toml  bitvec.json  fuzz_log.txt
ae/syrust/syrust_fuzz/bstr1/: Cargo.toml  bstr.json  fuzz_log.txt
ae/syrust/syrust_fuzz/bytemuck1/: Cargo.toml  fuzz_log.txt
ae/syrust/syrust_fuzz/dashmap1/: Cargo.toml  dashmap_fuzz_trans.json  fuzz_log.txt
ae/syrust/syrust_fuzz/generic_array1/: Cargo.toml  fuzz_log.txt  generic-array.json
ae/syrust/syrust_fuzz/petgraph1/: Cargo.toml  fuzz_log.txt  petgraph.json
ae/syrust/syrust_fuzz/sval1/: Cargo.toml  fuzz_log.txt  sval_fuzz_trans.json  sval_json.json
ae/syrust/syrust_replay/csv_core1/: Cargo.toml  cov.json  cov_map.json  cov_map_fn.json  csv_fuzz_trans.json  fuzz_cov.profdata
ae/syrust/syrust_replay/hashbrown1/: Cargo.toml  cov.json  cov_map_fn.json  fuzz_cov.profdata  hashbrown_fuzz_trans.json
ae/syrust/syrust_replay/im-rc1/: Cargo.toml  cov_map.json  cov_map_fn.json  fuzz_cov.profdata  im_fuzz_trans.json
ae/syrust/syrust_replay/utf8_width1/: Cargo.toml  cov.json  cov_map.json  cov_map_fn.json  fuzz_cov.profdata
ae/syrust/syrust_trans/crossbeam/: Cargo.toml  crossbeam-channel_fuzz_trans.json  crossbeam-utils_fuzz_trans.json
ae/syrust/syrust_trans/ndarray1/: Cargo.toml  ndarray-rand.json  ndarray_fuzz_trans.json
(+3218 files in other folders)
