[package]
name = "clap"
version = "2.33.3"
authors = [ "Kevin K. <kbknapp@gmail.com>",]
exclude = [ "examples/*", "clap-test/*", "tests/*", "benches/*", "*.png", "clap-perf/*", "*.dot",]
repository = "https://github.com/clap-rs/clap"
documentation = "https://docs.rs/clap/"
homepage = "https://clap.rs/"
readme = "README.md"
license = "MIT"
keywords = [ "argument", "cli", "arg", "parser", "parse",]
categories = [ "command-line-interface",]
description = "A simple to use, efficient, and full-featured Command Line Argument Parser\n"

[dependencies]
bitflags = "1.0"
unicode-width = "0.1.4"
textwrap = "0.11.0"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
regex = "1"
lazy_static = "1.3"
version-sync = "0.8"

[features]
default = [ "suggestions", "color", "vec_map",]
suggestions = [ "strsim",]
color = [ "ansi_term", "atty",]
wrap_help = [ "term_size", "textwrap/term_size",]
yaml = [ "yaml-rust",]
unstable = []
nightly = []
lints = [ "clippy",]
debug = []
no_cargo = []
doc = [ "yaml",]

[dependencies.strsim]
version = "0.8"
optional = true

[dependencies.yaml-rust]
version = "0.3.5"
optional = true

[dependencies.clippy]
version = "~0.0.166"
optional = true

[dependencies.atty]
version = "0.2.2"
optional = true

[dependencies.vec_map]
version = "0.8"
optional = true

[dependencies.term_size]
version = "0.3.0"
optional = true

[badges.travis-ci]
repository = "clap-rs/clap"

[badges.appveyor]
repository = "clap-rs/clap"

[badges.coveralls]
repository = "clap-rs/clap"
branch = "master"

[badges.is-it-maintained-issue-resolution]
repository = "clap-rs/clap"

[badges.is-it-maintained-open-issues]
repository = "clap-rs/clap"

[badges.maintenance]
status = "actively-developed"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.docs.rs]
features = [ "doc",]

[target."cfg(not(windows))".dependencies.ansi_term]
version = "0.11"
optional = true
