[package]
name = "flate2"
authors = [ "Alex Crichton <alex@alexcrichton.com>", "Josh Triplett <josh@joshtriplett.org>",]
version = "1.0.19"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = [ "gzip", "deflate", "zlib", "zlib-ng", "encoding",]
categories = [ "compression", "api-bindings",]
repository = "https://github.com/rust-lang/flate2-rs"
homepage = "https://github.com/rust-lang/flate2-rs"
documentation = "https://docs.rs/flate2"
description = "DEFLATE compression and decompression exposed as Read/BufRead/Write streams.\nSupports miniz_oxide, miniz.c, and multiple zlib implementations. Supports\nzlib, gzip, and raw deflate streams.\n"

[workspace]
members = [ "systest",]

[dependencies]
libc = "0.2.65"
cfg-if = "1.0.0"
crc32fast = "1.2.0"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
rand = "0.7"
tokio-io = "0.1.11"
tokio-tcp = "0.1.3"
tokio-threadpool = "0.1.10"
futures = "0.1"

[features]
default = [ "rust_backend",]
any_zlib = []
zlib = [ "any_zlib", "libz-sys",]
zlib-ng-compat = [ "zlib", "libz-sys/zlib-ng",]
cloudflare_zlib = [ "any_zlib", "cloudflare-zlib-sys",]
rust_backend = [ "miniz_oxide",]
tokio = [ "tokio-io", "futures",]

[dependencies.miniz-sys]
path = "miniz-sys"
version = "0.1.11"
optional = true

[dependencies.libz-sys]
version = "1.1.0"
optional = true
default-features = false

[dependencies.cloudflare-zlib-sys]
version = "0.2.0"
optional = true

[dependencies.tokio-io]
version = "0.1.11"
optional = true

[dependencies.futures]
version = "0.1.25"
optional = true

[dependencies.miniz_oxide]
version = "0.4.0"
optional = true
default-features = false

[dev-dependencies.quickcheck]
version = "0.9"
default-features = false

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[target."cfg(all(target_arch = \"wasm32\", not(target_os = \"emscripten\")))".dependencies.miniz_oxide]
version = "0.4.0"
default-features = false
