[package]
name = "proc-macro2"
version = "1.0.24"
authors = [ "Alex Crichton <alex@alexcrichton.com>", "David Tolnay <dtolnay@gmail.com>",]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [ "macros",]
repository = "https://github.com/alexcrichton/proc-macro2"
documentation = "https://docs.rs/proc-macro2"
categories = [ "development-tools::procedural-macro-helpers",]
edition = "2018"
description = "A substitute implementation of the compiler's `proc_macro` API to decouple\ntoken-based libraries from the procedural macro use case.\n"

[dependencies]
unicode-xid = "0.2"
bolero = "0.8.0"
arbitrary = "1.3.2"

[features]
proc-macro = []
default = [ "proc-macro",]
span-locations = []
nightly = []

[workspace]
members = [ "benches/bench-libproc-macro", "tests/ui",]

[dev-dependencies.quote]
version = "1.0"
default_features = false

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.playground]
features = [ "span-locations",]

[patch.crates-io.proc-macro2]
path = "."

[package.metadata.docs.rs]
rustc-args = [ "--cfg", "procmacro2_semver_exempt",]
rustdoc-args = [ "--cfg", "procmacro2_semver_exempt",]
targets = [ "x86_64-unknown-linux-gnu",]
