[package]
name = "regex-syntax"
version = "0.6.22"
authors = [ "The Rust Project Developers",]
description = "A regular expression parser."
homepage = "https://github.com/rust-lang/regex"
documentation = "https://docs.rs/regex-syntax"
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/regex"

[features]
default = [ "unicode",]
unicode = [ "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment",]
unicode-age = []
unicode-bool = []
unicode-case = []
unicode-gencat = []
unicode-perl = []
unicode-script = []
unicode-segment = []

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1
