[[test]]
path = "tests/test_default.rs"
name = "default"

[[test]]
path = "tests/test_default_bytes.rs"
name = "default-bytes"

[[test]]
path = "tests/test_nfa.rs"
name = "nfa"

[[test]]
path = "tests/test_nfa_utf8bytes.rs"
name = "nfa-utf8bytes"

[[test]]
path = "tests/test_nfa_bytes.rs"
name = "nfa-bytes"

[[test]]
path = "tests/test_backtrack.rs"
name = "backtrack"

[[test]]
path = "tests/test_backtrack_utf8bytes.rs"
name = "backtrack-utf8bytes"

[[test]]
path = "tests/test_backtrack_bytes.rs"
name = "backtrack-bytes"

[[test]]
path = "tests/test_crates_regex.rs"
name = "crates-regex"

[package]
name = "regex"
version = "1.4.3"
authors = [ "The Rust Project Developers",]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/regex"
documentation = "https://docs.rs/regex"
homepage = "https://github.com/rust-lang/regex"
description = "An implementation of regular expressions for Rust. This implementation uses\nfinite automata and guarantees linear time matching on all inputs.\n"
categories = [ "text-processing",]
autotests = false
exclude = [ "/scripts/*", "/.github/*",]

[workspace]
members = [ "bench", "regex-capi", "regex-debug", "regex-syntax",]

[lib]
bench = false
doctest = false

[features]
default = [ "std", "perf", "unicode", "regex-syntax/default",]
std = []
use_std = [ "std",]
perf = [ "perf-cache", "perf-dfa", "perf-inline", "perf-literal",]
perf-cache = [ "thread_local",]
perf-dfa = []
perf-inline = []
perf-literal = [ "aho-corasick", "memchr",]
unicode = [ "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment", "regex-syntax/unicode",]
unicode-age = [ "regex-syntax/unicode-age",]
unicode-bool = [ "regex-syntax/unicode-bool",]
unicode-case = [ "regex-syntax/unicode-case",]
unicode-gencat = [ "regex-syntax/unicode-gencat",]
unicode-perl = [ "regex-syntax/unicode-perl",]
unicode-script = [ "regex-syntax/unicode-script",]
unicode-segment = [ "regex-syntax/unicode-segment",]
unstable = [ "pattern",]
pattern = []

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
lazy_static = "=1"
rand = "0.6.5"

[dependencies.aho-corasick]
version = "=0.7.6"
optional = true

[dependencies.memchr]
version = "=2.2.1"
optional = true

[dependencies.thread_local]
version = "=1.0.1"
optional = true

[dependencies.regex-syntax]
path = "regex-syntax"
version = "=0.6.22"
default-features = false

[dev-dependencies.quickcheck]
version = "=0.8"
default-features = false

[profile.release]
debug = true

[profile.bench]
debug = true

[profile.test]
debug = true

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1
