[package]
name = "serde_json"
version = "1.0.61"
authors = [ "Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>",]
license = "MIT OR Apache-2.0"
description = "A JSON serialization file format"
repository = "https://github.com/serde-rs/json"
documentation = "https://docs.serde.rs/serde_json/"
keywords = [ "json", "serde", "serialization",]
categories = [ "encoding",]
readme = "README.md"
include = [ "build.rs", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT",]
edition = "2018"

[dependencies]
ryu = "1.0"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
automod = "1.0"
rustversion = "1.0"
serde_bytes = "0.11"
serde_derive = "1.0"
serde_stacker = "0.1"

[features]
default = [ "std",]
std = [ "serde/std",]
alloc = [ "serde/alloc",]
preserve_order = [ "indexmap",]
float_roundtrip = []
arbitrary_precision = []
raw_value = []
unbounded_depth = []

[dependencies.serde]
version = "1.0.100"
default-features = false

[dependencies.indexmap]
version = "1.5"
optional = true

[dependencies.itoa]
version = "0.4.3"
default-features = false

[dev-dependencies.trybuild]
version = "1.0.19"
features = [ "diff",]

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.playground]
features = [ "raw_value",]

[package.metadata.docs.rs]
features = [ "raw_value", "unbounded_depth",]
targets = [ "x86_64-unknown-linux-gnu",]
