[package]
edition = "2021"
rust-version = "1.60.0"
name = "regex-syntax"
version = "0.7.1"
authors = [ "The Rust Project Developers",]
description = "A regular expression parser."
homepage = "https://github.com/rust-lang/regex"
documentation = "https://docs.rs/regex-syntax"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/regex"

[features]
default = [ "std", "unicode",]
std = []
unicode = [ "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment",]
unicode-age = []
unicode-bool = []
unicode-case = []
unicode-gencat = []
unicode-perl = []
unicode-script = []
unicode-segment = []

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs",]
