[package]
name = "rure"
version = "0.2.1"
authors = [ "The Rust Project Developers",]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/regex"
documentation = "https://github.com/rust-lang/regex/tree/master/regex-capi"
homepage = "https://github.com/rust-lang/regex"
description = "A C API for Rust's regular expression library.\n"
workspace = ".."

[lib]
name = "rure"
crate-type = [ "staticlib", "cdylib",]

[dependencies]
libc = "0.2"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dependencies.regex]
version = "1"
path = ".."
