[[bench]]
name = "parse_url"
path = "benches/parse_url.rs"
harness = false

[package]
name = "url"
version = "2.2.0"
authors = [ "The rust-url developers",]
description = "URL library for Rust, based on the WHATWG URL Standard"
documentation = "https://docs.rs/url"
repository = "https://github.com/servo/rust-url"
readme = "../README.md"
keywords = [ "url", "parser",]
categories = [ "parser-implementations", "web-programming", "encoding",]
license = "MIT/Apache-2.0"
include = [ "src/**/*", "LICENSE-*", "README.md",]
edition = "2018"

[dev-dependencies]
serde_json = "1.0"
bencher = "0.1"

[dependencies]
matches = "0.1"
bolero = "0.8.0"
arbitrary = "1.3.2"

[badges.travis-ci]
repository = "servo/rust-url"

[badges.appveyor]
repository = "Manishearth/rust-url"

[dependencies.form_urlencoded]
version = "1.0.0"
path = "../form_urlencoded"

[dependencies.idna]
version = "0.2.0"
path = "../idna"

[dependencies.percent-encoding]
version = "2.1.0"
path = "../percent_encoding"

[dependencies.serde]
version = "1.0"
optional = true
features = [ "derive",]
