[package]
name = "time-macros-impl"
version = "0.1.1"
authors = [ "Jacob Pratt <the.z.cuber@gmail.com>",]
edition = "2018"
repository = "https://github.com/time-rs/time"
keywords = [ "date", "time", "calendar", "duration",]
categories = [ "date-and-time",]
readme = "../README.md"
license = "MIT OR Apache-2.0"
description = "Procedural macros for the time crate."

[dependencies]
proc-macro2 = "1"
quote = "1"
proc-macro-hack = "0.5"
bolero = "0.8.0"
arbitrary = "1.3.2"

[lib]
proc-macro = true

[dependencies.syn]
version = "1.0.15"
default-features = false
features = [ "proc-macro", "parsing", "printing",]

[dependencies.standback]
version = "0.2"
default-features = false
