[package]
name = "xi-core-lib"
version = "0.4.0"
license = "Apache-2.0"
authors = [ "Raph Levien <raph@google.com>",]
description = "Library module for xi-core"
repository = "https://github.com/google/xi-editor"
edition = "2018"

[dependencies]
proc-macro2 = "=1.0.24"
slab = "=0.4.3"
quote = "=1.0.9"
log = "0.4.3"
serde_json = "1.0"
serde_derive = "1.0"
time = "0.1"
toml = "0.5"
regex = "1.0"
memchr = "2.0.1"
crossbeam-channel = "0.3"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
tempdir = "^0.3.4"

[features]
ledger = []
default = [ "notify",]

[dependencies.serde]
version = "1.0"
features = [ "rc",]

[dependencies.notify]
optional = true
version = "=5.0.0-pre.1"

[dependencies.xi-trace]
path = "../trace"
version = "0.2.0"

[dependencies.xi-rope]
path = "../rope"
version = "0.3"
features = [ "serde",]

[dependencies.xi-unicode]
path = "../unicode"
version = "0.3.0"

[dependencies.xi-rpc]
path = "../rpc"
version = "0.3.0"

[dependencies.syntect]
version = "3.2"
default-features = false
features = [ "assets", "dump-load-rs", "dump-create",]

[target."cfg(target_os = \"fuchsia\")".dependencies]
sha2 = "0.8"
