[package]
authors = [ "Raph Levien <raph@google.com>",]
description = "A generic rope data structure built on top of B-Trees."
license = "Apache-2.0"
name = "xi-rope"
repository = "https://github.com/google/xi-editor"
version = "0.3.0"
edition = "2018"

[dependencies]
bytecount = "0.6"
memchr = "2.0"
unicode-segmentation = "1.2.1"
regex = "1.0"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
serde_test = "^1.0"
serde_json = "1.0"

[features]
default = []

[dependencies.serde]
version = "1.0"
optional = true
features = [ "derive",]
