[package]
name = "bitvec"
version = "0.18.0"
authors = [ "myrrlyn <self@myrrlyn.dev>",]
categories = [ "data-structures", "embedded", "no-std", "rust-patterns",]
description = "A crate for manipulating memory, bit by bit"
documentation = "https://docs.rs/bitvec"
edition = "2018"
homepage = "https://myrrlyn.net/crates/bitvec"
include = [ "Cargo.toml", "src/**/*.rs",]
keywords = [ "bitfields", "bits", "bitstream", "bitvec", "bitvector",]
license = "MIT"
readme = "README.md"
repository = "https://github.com/myrrlyn/bitvec"

[features]
alloc = []
atomic = []
default = [ "atomic", "std",]
std = [ "alloc",]

[dependencies]
funty = "1"
radium = "0.3"
wyz = "0.2"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
serde = "1"
serde_json = "1"
serde_test = "1"
static_assertions = "1"

[dependencies.serde]
default-features = false
optional = true
version = "1"

[badges.codecov]
repository = "myrrlyn/bitvec"
branch = "master"
service = "github"

[badges.is-it-maintained-issue-resolution]
repository = "myrrlyn/bitvec"

[badges.is-it-maintained-open-issues]
repository = "myrrlyn/bitvec"

[badges.maintenance]
status = "actively-developed"

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.docs.rs]
features = [ "atomic", "serde", "std",]
