[package]
name = "bytemuck"
description = "A crate for mucking around with piles of bytes."
version = "1.4.1"
authors = [ "Lokathor <zefria@gmail.com>",]
repository = "https://github.com/Lokathor/bytemuck"
readme = "README.md"
keywords = [ "transmute", "bytes", "casting",]
categories = [ "encoding", "no-std",]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"
exclude = [ "/pedantic.bat",]

[features]
extern_crate_alloc = []
extern_crate_std = [ "extern_crate_alloc",]
zeroable_maybe_uninit = []
derive = [ "bytemuck_derive",]

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[dependencies.bytemuck_derive]
version = "1"
optional = true

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.playground]
all-features = true

[package.metadata.docs.rs]
all-features = true
