[package]
name = "dashmap"
version = "3.11.10"
authors = [ "Acrimon <joel.wejdenstal@gmail.com>",]
edition = "2018"
license = "MIT"
repository = "https://github.com/xacrimon/dashmap"
homepage = "https://github.com/xacrimon/dashmap"
description = "Blazing fast concurrent HashMap for Rust."
readme = "README.md"
documentation = "https://docs.rs/dashmap"
keywords = [ "atomic", "concurrent", "hashmap",]
categories = [ "concurrency", "algorithms", "data-structures",]

[features]
default = []
raw-api = []
no_std = [ "hashbrown",]

[dependencies]
num_cpus = "1.13.0"
ahash = "0.3.8"
cfg-if = "0.1.10"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dependencies.serde]
version = "1.0.114"
optional = true
features = [ "derive",]

[dependencies.hashbrown]
version = "0.8.0"
optional = true

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.docs.rs]
features = [ "raw-api", "serde",]
