[package]
name = "generic-array"
version = "0.12.0"
authors = [ "Bartłomiej Kamiński <fizyk20@gmail.com>", "Aaron Trent <novacrazy@gmail.com>",]
description = "Generic types implementing functionality of arrays"
readme = "README.md"
license = "MIT"
documentation = "http://fizyk20.github.io/generic-array/generic_array/"
repository = "https://github.com/fizyk20/generic-array.git"
keywords = [ "generic", "array",]
categories = [ "data-structures", "no-std",]

[lib]
name = "generic_array"

[dependencies]
typenum = "1.10"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev_dependencies]
serde_json = "1.0"
bincode = "1.0"

[dependencies.serde]
version = "1.0"
optional = true
default-features = false

[badges.travis-ci]
repository = "fizyk20/generic-array"

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1
