[package]
name = "petgraph"
version = "0.5.1"
license = "MIT/Apache-2.0"
authors = [ "bluss", "mitchmindtree",]
description = "Graph data structure library. Provides graph types and graph algorithms."
documentation = "https://docs.rs/petgraph/"
repository = "https://github.com/petgraph/petgraph"
keywords = [ "data-structure", "graph", "unionfind", "graph-algorithms",]
categories = [ "data-structures",]
edition = "2018"

[lib]
name = "petgraph"
bench = false

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
rand = "0.5.5"
defmac = "0.1"

[features]
default = [ "graphmap", "stable_graph", "matrix_graph",]
graphmap = []
serde-1 = [ "serde", "serde_derive",]
stable_graph = []
matrix_graph = []
generate = []
unstable = [ "generate",]
all = [ "unstable", "quickcheck", "matrix_graph", "stable_graph", "graphmap",]

[workspace]
members = [ "serialization-tests",]

[dependencies.fixedbitset]
version = "0.2.0"
default-features = false

[dependencies.quickcheck]
optional = true
version = "0.8"
default-features = false

[dependencies.indexmap]
version = "1.0.2"

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[dev-dependencies.odds]
version = "0.2.19"

[dev-dependencies.itertools]
version = "0.8"
default-features = false

[profile.release]

[profile.bench]
debug = true

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.release]
no-dev-version = true

[package.metadata.docs.rs]
features = [ "serde-1", "quickcheck",]
