[workspace]
members = [ "derive", "tests/serde_alloc", "tests/serde_no_alloc", "tests/fmt", "json", "json/benches", "json/tests",]

[package]
name = "sval"
version = "0.5.2"
authors = [ "Ashley Mannix <ashleymannix@live.com.au>",]
edition = "2018"
documentation = "https://docs.rs/sval"
description = "A no-std, object-safe serialization framework"
repository = "https://github.com/sval-rs/sval"
readme = "README.md"
exclude = [ ".travis.yml", "ci/*",]
license = "Apache-2.0 OR MIT"
keywords = [ "serialization", "no_std",]
categories = [ "encoding", "no-std",]

[features]
std = [ "alloc",]
alloc = []
arbitrary-depth = [ "alloc", "smallvec",]
derive = [ "sval_derive",]
fmt = []
serde = [ "serde_lib",]
test = [ "std",]

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[dependencies.smallvec]
version = "1"
default-features = false
optional = true

[dependencies.serde_lib]
version = "1.0.104"
optional = true
default-features = false
package = "serde"

[dependencies.sval_derive]
version = "0.5.2"
path = "./derive"
optional = true

[badges.travis-ci]
repository = "sval-rs/sval"

[dev-dependencies.quickcheck]
version = "0.9"

[profile.release]
debug = true

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.docs.rs]
features = [ "derive", "serde", "fmt", "test", "std",]
