[package]
name = "csv"
version = "1.1.3"
authors = [ "Andrew Gallant <jamslam@gmail.com>",]
description = "Fast CSV parsing with support for serde."
documentation = "http://burntsushi.net/rustdoc/csv/"
homepage = "https://github.com/BurntSushi/rust-csv"
repository = "https://github.com/BurntSushi/rust-csv"
readme = "README.md"
keywords = [ "csv", "comma", "parser", "delimited", "serde",]
license = "Unlicense/MIT"
categories = [ "encoding", "parser-implementations",]
exclude = [ "/.travis.yml", "/appveyor.yml", "/ci/*", "/scripts/*",]
edition = "2018"

[workspace]
members = [ "csv-core", "csv-index",]

[lib]
bench = false

[dependencies]
itoa = "0.4.3"
ryu = "1"
serde = "1.0.55"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dependencies.bstr]
version = "0.2.1"
features = [ "serde1",]

[dependencies.csv-core]
path = "csv-core"
version = "0.1.6"

[badges.travis-ci]
repository = "BurntSushi/rust-csv"

[badges.appveyor]
repository = "BurntSushi/rust-csv"

[dev-dependencies.serde]
version = "1.0.55"
features = [ "derive",]

[profile.release]
debug = true

[profile.bench]
debug = true

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1
