[package]
name = "hashbrown"
version = "0.9.1"
authors = [ "Amanieu d'Antras <amanieu@gmail.com>",]
description = "A Rust port of Google's SwissTable hash map"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/hashbrown"
readme = "README.md"
keywords = [ "hash", "no_std", "hashmap", "swisstable",]
categories = [ "data-structures", "no-std",]
exclude = [ ".travis.yml", "bors.toml", "/ci/*",]
edition = "2018"

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
lazy_static = "1.2"
rayon = "1.0"
rustc-hash = "=1.0"
serde_test = "1.0"
doc-comment = "0.3.1"

[features]
default = [ "ahash", "inline-more",]
ahash-compile-time-rng = [ "ahash/compile-time-rng",]
nightly = []
rustc-internal-api = []
rustc-dep-of-std = [ "nightly", "core", "compiler_builtins", "alloc", "rustc-internal-api",]
raw = []
inline-more = []

[dependencies.ahash]
version = "0.4.4"
optional = true
default-features = false

[dependencies.rayon]
version = "1.0"
optional = true

[dependencies.serde]
version = "1.0.25"
default-features = false
optional = true

[dependencies.core]
version = "1.0.0"
optional = true
package = "rustc-std-workspace-core"

[dependencies.compiler_builtins]
version = "0.1.2"
optional = true

[dependencies.alloc]
version = "1.0.0"
optional = true
package = "rustc-std-workspace-alloc"

[dev-dependencies.rand]
version = "0.7.3"
features = [ "small_rng",]

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.docs.rs]
features = [ "nightly", "rayon", "serde", "raw",]
