[[bench]]
name = "bench"
harness = false

[package]
name = "utf8-width"
version = "0.1.4"
authors = [ "Magic Len <len@magiclen.org>",]
edition = "2018"
repository = "https://github.com/magiclen/utf8-width"
homepage = "https://magiclen.org/utf8-width"
keywords = [ "utf-8", "width", "length", "character",]
categories = [ "no-std", "encoding",]
description = "To determine the width of a UTF-8 character by providing its first byte."
readme = "README.md"
license = "MIT"
include = [ "src/**/*", "Cargo.toml", "README.md", "LICENSE", "benches/bench.rs",]

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
bencher = "0.1.5"

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1
