[package]
name = "crossbeam"
version = "0.7.3"
authors = [ "The Crossbeam Project Developers",]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/crossbeam-rs/crossbeam"
homepage = "https://github.com/crossbeam-rs/crossbeam"
documentation = "https://docs.rs/crossbeam"
description = "Tools for concurrent programming"
keywords = [ "atomic", "garbage", "non-blocking", "lock-free", "rcu",]
categories = [ "concurrency", "memory-management", "data-structures", "no-std",]
exclude = [ "/ci/*", "/bors.toml",]

[features]
default = [ "std",]
std = [ "alloc", "crossbeam-channel/std", "crossbeam-deque/std", "crossbeam-epoch/std", "crossbeam-queue/std", "crossbeam-utils/std",]
alloc = [ "crossbeam-epoch/alloc", "crossbeam-queue/alloc",]
nightly = [ "crossbeam-epoch/nightly", "crossbeam-utils/nightly", "crossbeam-queue/nightly",]

[dependencies]
cfg-if = "0.1.10"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
rand = "0.7.3"

[workspace]
members = [ ".", "crossbeam-channel", "crossbeam-channel/benchmarks", "crossbeam-deque", "crossbeam-epoch", "crossbeam-queue", "crossbeam-skiplist", "crossbeam-utils",]

[dependencies.crossbeam-channel]
version = "0.4"
path = "./crossbeam-channel"
default-features = false
optional = true

[dependencies.crossbeam-deque]
version = "0.7.0"
path = "./crossbeam-deque"
default-features = false
optional = true

[dependencies.crossbeam-epoch]
version = "0.8"
path = "./crossbeam-epoch"
default-features = false
optional = true

[dependencies.crossbeam-queue]
version = "0.2"
path = "./crossbeam-queue"
default-features = false
optional = true

[dependencies.crossbeam-utils]
version = "0.7"
path = "./crossbeam-utils"
default-features = false

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1
