[package]
name = "ndarray"
version = "0.13.1"
edition = "2018"
authors = [ "bluss", "Jim Turner",]
license = "MIT/Apache-2.0"
readme = "README-crates.io.md"
repository = "https://github.com/rust-ndarray/ndarray"
documentation = "https://docs.rs/ndarray/"
description = "An n-dimensional array for general elements and for numerics. Lightweight array views and slicing; views support chunking and splitting."
keywords = [ "array", "data-structure", "multidimensional", "matrix", "blas",]
categories = [ "data-structures", "science",]
build = "build.rs"
exclude = [ "docgen/images/*",]

[lib]
name = "ndarray"
bench = false
test = true

[dependencies]
num-integer = "0.1.39"
num-traits = "0.2"
num-complex = "0.2"
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
defmac = "0.2"
approx = "0.3.2"

[features]
blas = [ "cblas-sys", "blas-src",]
serde-1 = [ "serde",]
test-blas-openblas-sys = [ "blas",]
test = [ "test-blas-openblas-sys",]
docs = [ "approx", "serde", "rayon",]

[workspace]
members = [ "ndarray-rand", "serialization-tests", "blas-tests",]
exclude = [ "numeric-tests",]

[dependencies.rayon]
version = "1.0.3"
optional = true

[dependencies.approx]
version = "0.3.2"
optional = true

[dependencies.cblas-sys]
version = "0.1.4"
optional = true
default-features = false

[dependencies.blas-src]
version = "0.2.0"
optional = true
default-features = false

[dependencies.matrixmultiply]
version = "0.2.0"

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.rawpointer]
version = "0.2"

[dev-dependencies.quickcheck]
version = "0.9"
default-features = false

[dev-dependencies.itertools]
version = "0.8.0"
default-features = false
features = [ "use_std",]

[profile.release]

[profile.bench]
debug = true

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[package.metadata.docs.rs]
features = [ "docs",]
